<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="com.djay.shoppingcart.model.Product" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".productdetails.ProductDetailsActivity">

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:contentDescription="@string/product_image"
            android:src="@drawable/shoe_1"
            app:image="@{product.photo}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvProductName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@{product.name}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textSize="17sp"
            app:layout_constraintEnd_toStartOf="@id/tvPrice"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/ivProduct"
            app:layout_constraintTop_toBottomOf="@id/ivProduct"
            tools:text="White Sneakers" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@{String.format(@string/_amount, product.price)}"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvProductName"
            app:layout_constraintEnd_toEndOf="@id/ivProduct"
            tools:text=" $500" />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@{product.desc}"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/tvProductName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tvProductName"
            app:layout_constraintTop_toBottomOf="@id/tvProductName"
            tools:text="200+ sold" />

        <TextView
            android:id="@+id/tvQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tvDesc"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tvDesc"
            app:layout_constraintTop_toBottomOf="@id/tvDesc" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/tvProductName"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/tvQuantity"
            app:layout_constraintTop_toBottomOf="@id/tvQuantity">

            <ImageButton
                android:id="@+id/ibMinus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/minus"
                android:onClick="decreaseQuantity"
                android:src="@drawable/minus" />

            <EditText
                android:id="@+id/edtQuantity"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:importantForAutofill="no"
                android:inputType="number"
                android:labelFor="@string/quantity"
                android:text="@string/_1"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                tools:ignore="LabelFor"
                tools:text="1" />

            <ImageButton
                android:id="@+id/ibPlus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/plus"
                android:onClick="increaseQuantity"
                android:src="@drawable/plus" />
        </LinearLayout>

        <Button
            android:id="@+id/btnAddToCart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="addToCart"
            android:padding="20dp"
            android:text="@string/add_to_cart"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>