<resources>
    <string name="app_name">ShoppingCart</string>
    <string name="details">Details</string>
    <string name="my_cart">My Cart</string>

    <string name="no_products_found">No products found</string>
    <string name="error_occurred">An error occurred</string>
    <string name="product_image">Product Image</string>
    <string name="plus">plus</string>
    <string name="minus">minus</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="_amount">$%s</string>
    <string name="total_amount">Total: $%s</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_">Quantity: %s</string>
    <string name="remove">Remove</string>
    <string name="place_your_order">Place your order</string>
    <string name="_1">1</string>
    <string name="order_placed">Order placed successfully.</string>
    <string name="ten">10</string>
    <string name="cart_cleared">Cart cleared.</string>
    <string name="product_added">Product added to cart.</string>

</resources>
